--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,7 @@
 \newcommand{\half}{\ensuremath{\frac{1}{2}}}
 \newcommand\del{\overline{\boldsymbol{{\triangledown}}}}
 \newcommand\maal{\boldsymbol{\times}}
+\newcommand\spatie{\quad\quad\quad\quad}
 \counterwithin*{equation}{chapter}
 \counterwithin*{equation}{section}
 \counterwithin*{equation}{subsection}
