--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage {graphicx,float} 
 %\newcommand{\edal}{\end{align}}
 %\newcommand{\bgal}{\begin{align}\end{align}}
+\newcommand{\Lagr}{\mathcal{L}}
 %\newtheorem{theorem}{Theorem}
 \newtheorem{lemma}{Lemma}
 \renewcommand\thelemma{\unskip}
